Add page elements

--- a/index.html
+++ b/index.html
@@ -4,6 +4,37 @@
         <title>Product Landing Page</title>
     </head>
     <body>
-        
+        <header id="header">
+            <img id="header-img" src="sample.jpg" alt="logo"/>
+
+            <nav id="nav-bar">
+                <ul>
+                    <a href="#section1" class="nav-link">
+                        <li>Page 1</li>
+                    </a>
+                    <a href="#section2" class="nav-link">
+                        <li>Page 2</li>
+                    </a>
+                    <a href="#form" class="nav-link">
+                        <li>Page 3</li>
+                    </a>
+                </ul>
+            </nav>
+        </header>
+
+        <video src="video.mp4"></video>
+
+        <section id="section1"></section>
+        <section id="section2"></section>
+
+        <form id="form" action="https://www.freecodecamp.com/email-submit">
+            <input id="email" type="email" placeholder="johndoe@gmail.com" name="email"/>
+
+            <input id="submit" type="submit" value="Submit" />
+
+        </form>
+
+
+        <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     </body>
 </html>
