--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Product Landing Page</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header id="header">
