Add page elements

--- a/index.html
+++ b/index.html
@@ -28,13 +28,22 @@
         <section id="section1"></section>
         <section id="section2"></section>
 
+
+        <h2>Subscribe to our Newsletter</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste nulla, nobis voluptatum amet incidunt officiis aliquid vel velit, earum numquam, quos consequatur odio quis beatae pariatur fugiat itaque doloribus tenetur.</p>
+
         <form id="form" action="https://www.freecodecamp.com/email-submit">
-            <input id="email" type="email" placeholder="johndoe@gmail.com" name="email"/>
-
-            <input id="submit" type="submit" value="Submit" />
-
+            <div>
+                <input id="email" type="email" placeholder="johndoe@gmail.com" name="email"/>
+                <input id="submit" type="submit" value="Submit" />
+            </div>
+                
+            
+            <div>
+                <input id="privacy_policy" type="checkbox" required />
+                <label for="privacy_policy">I agree to {{company name}} <a>Privacy Policy</a></label>
+            </div>
         </form>
-
 
         <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     </body>
