--- a/index.html
+++ b/index.html
@@ -1,49 +1,93 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Product Landing Page</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header id="header">
-    <img id="header-img" src="sample.jpg" alt="logo"/>
+    <img id="header-img" src="./assets/logo.png" alt="logo"/>
 
     <nav id="nav-bar">
       <ul>
-        <a href="#section1" class="nav-link">
-          <li>Page 1</li>
+        <a href="#features-section" class="nav-link">
+          <li>Features</li>
         </a>
-        <a href="#section2" class="nav-link">
-          <li>Page 2</li>
+        <a href="#installation-section" class="nav-link">
+          <li>Installation</li>
         </a>
         <a href="#form" class="nav-link">
-          <li>Page 3</li>
+          <li>Buy Now?</li>
         </a>
       </ul>
     </nav>
   </header>
 
-  <video src="video.mp4"></video>
-
-  <section id="section1"></section>
-  <section id="section2"></section>
-
-
-  <h2>Subscribe to our Newsletter</h2>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste nulla, nobis voluptatum amet incidunt officiis aliquid vel velit, earum numquam, quos consequatur odio quis beatae pariatur fugiat itaque doloribus tenetur.</p>
-
-  <form id="form" action="https://www.freecodecamp.com/email-submit">
-    <div>
-      <input id="email" type="email" placeholder="johndoe@gmail.com" name="email"/>
-      <input id="submit" type="submit" value="Submit" />
+  <div id="intro">
+    <div id="intro-content">
+      <p id="intro-title">Parrot Security OS</p>
+      <p id="intro-description">for Cybersecurity Professionals</p>
     </div>
-      
+
+  </div>
+
+  <section id="features-section">
+    <header class="section-header">Features</header>
     
-    <div>
-      <input id="privacy_policy" type="checkbox" required />
-      <label for="privacy_policy">I agree to {{company name}} <a>Privacy Policy</a></label>
+    <div class="feature-card">
+      <img src="./assets/icons/secure.png" alt="">
+      <div class="feature-content">
+        <header>Secure</header>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, beatae? Suscipit ipsam sapiente, porro omnis, quo eius rerum amet magnam aperiam, tempore excepturi fuga veniam id qui! Rerum, possimus ducimus.</p>
+      </div>
     </div>
-  </form>
+
+    <div class="feature-card">
+      <img src="./assets/icons/fast.png" alt="">
+      <div class="feature-content">
+        <header>Lightweight</header>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, beatae? Suscipit ipsam sapiente, porro omnis, quo eius rerum amet magnam aperiam, tempore excepturi fuga veniam id qui! Rerum, possimus ducimus.</p>
+      </div>
+    </div>
+
+    <div class="feature-card">
+      <img src="./assets/icons/tools.png" alt="">
+      <div class="feature-content">
+        <header>Free</header>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, beatae? Suscipit ipsam sapiente, porro omnis, quo eius rerum amet magnam aperiam, tempore excepturi fuga veniam id qui! Rerum, possimus ducimus.</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="installation-section">
+    <header class="section-header">Installation</header>
+    <p>Ready to install ParrotOS? Check out the resources below:</p>
+
+    <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/A7c_GOduMbA" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+
+    <a id="download-btn" href="https://www.parrotsec.org/security-edition/" target="_blank">Download</a>
+  </section>
+
+  <section id="subscription-section">
+    <h2>Subscribe to our Newsletter</h2>
+    <p>Get informed of the latest updates</p>
+
+    <form id="form" action="https://www.freecodecamp.com/email-submit">
+      <div>
+        <input id="email" type="email" placeholder="johndoe@gmail.com" name="email"/>
+        <input id="submit" type="submit" value="Submit" />
+      </div>
+
+      <div>
+        <input id="privacy_policy" type="checkbox" required />
+        <label for="privacy_policy">I agree to Parrot's <a href="">Privacy Policy</a></label>
+      </div>
+    </form>
+  </section>
+
+  <!-- <div id="prelude-bg-img"></div> -->
 
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
