Update features section content

--- a/index.html
+++ b/index.html
@@ -36,27 +36,29 @@
   <section id="features-section">
     <header class="section-header">Features</header>
     
-    <div class="feature-card">
-      <img src="./assets/icons/secure.png" alt="">
-      <div class="feature-content">
-        <header>Secure</header>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, beatae? Suscipit ipsam sapiente, porro omnis, quo eius rerum amet magnam aperiam, tempore excepturi fuga veniam id qui! Rerum, possimus ducimus.</p>
+    <div id="feature-card-group">
+      <div class="feature-card">
+        <img src="./assets/icons/secure.png" alt="">
+        <div class="feature-content">
+          <header>Secure</header>
+          <p>With frequent updates, multiple application sandboxing and hardening, Parrot OS keeps your life secure. Parrot OS also comes with privacy protection and advanced encryption techniques.</p>
+        </div>
       </div>
-    </div>
-
-    <div class="feature-card">
-      <img src="./assets/icons/fast.png" alt="">
-      <div class="feature-content">
-        <header>Lightweight</header>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, beatae? Suscipit ipsam sapiente, porro omnis, quo eius rerum amet magnam aperiam, tempore excepturi fuga veniam id qui! Rerum, possimus ducimus.</p>
+    
+      <div class="feature-card">
+        <img src="./assets/icons/fast.png" alt="">
+        <div class="feature-content">
+          <header>Lightweight</header>
+          <p>Parrot OS is specially engineered to be as light as possible. Using a light desktop environment to keep resource usage minimal, even old devices can make use of Parrot OS.</p>
+        </div>
       </div>
-    </div>
 
-    <div class="feature-card">
-      <img src="./assets/icons/tools.png" alt="">
-      <div class="feature-content">
-        <header>Free</header>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, beatae? Suscipit ipsam sapiente, porro omnis, quo eius rerum amet magnam aperiam, tempore excepturi fuga veniam id qui! Rerum, possimus ducimus.</p>
+      <div class="feature-card">
+        <img src="./assets/icons/tools.png" alt="">
+        <div class="feature-content">
+          <header>Powerful</header>
+          <p>Parrot OS comes with everything you need. Packed with tools for reverse engineering, digital forensics, pentesting and many more, Parrot OS is sure to fulfill your cybersecurity needs.</p>
+        </div>
       </div>
     </div>
   </section>
