Minor section content styling change

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <section id="features-section">
     <header class="section-header">Features</header>
     
-    <div id="feature-card-group">
+    <div id="feature-card-group" class="section-content">
       <div class="feature-card">
         <img src="./assets/icons/secure.png" alt="">
         <div class="feature-content">
