Add styling for installation section

--- a/index.html
+++ b/index.html
@@ -65,11 +65,13 @@
 
   <section id="installation-section">
     <header class="section-header">Installation</header>
-    <p>Ready to install ParrotOS? Check out the resources below:</p>
-
-    <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/A7c_GOduMbA" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
-
-    <a id="download-btn" href="https://www.parrotsec.org/security-edition/" target="_blank">Download</a>
+    <div class="section-content">
+      <p id="installation-instructions">Ready to install ParrotOS? Check out the resources below:</p>
+      
+      <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/A7c_GOduMbA" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+      
+      <a id="download-btn" href="https://www.parrotsec.org/security-edition/" target="_blank">Download</a>
+    </div>
   </section>
 
   <section id="subscription-section">
