--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <section id="installation-section">
     <header class="section-header">Installation</header>
     <div class="section-content">
-      <p id="installation-instructions">Ready to install ParrotOS? Check out the resources below:</p>
+      <header class="section-intro">Ready to install ParrotOS? Check out the resources below:</header>
       
       <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/A7c_GOduMbA" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
       
